# pytest-loop

./: .travis.yml  CHANGES.rst  Pipfile  README.rst  pyproject.toml  pytest-loop.py  pytest_loop.py  requirements.txt  setup.py  test_loop.py  tox.ini
.github/.workflows/: test.yml
.github/workflows/: publish-to-test-pypi.yml  pypi-package.yml  test.yml
src/: pytest_loop.py
src/pytest_loop/: __init__.py  pytest_loop.py
