[project]
name = "pytest-loop"
version="1.0.7"
description='pytest plugin for looping tests'
long_description= {file = "README.rst"}
readme = "README.rst"
license = {file = "LICENSE"}
keywords='pytest loop repeat rerun stress pytest-loop'
authors = [{name = "Adam Nogowski"}]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]
dynamic = [ "version" ]
dependencies = [ "pytest" ]

[project.urls]
Home = "https://github.com/anogowski/pytest-loop"

[project.entry-points.pytest11]
loop = "pytest_loop"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"